[project]
name = "routermarker"
version = "0.1.0"
description = ""
authors = [
    {name = "ketikai",email = "ketikai@idealstate.team"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pywin32 (>=310,<311)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "pyinstaller (>=6.13.0,<7.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "ctklistbox (>=1.5,<2.0)",
]


[tool.poetry]
packages = [
    {include = "app", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
